<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Skrumaz</string>
    <string name="rally_software">Rally Software</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="menu_array">
        <item>Home</item>
        <item>Projects</item>
        <item>Iterations</item>
        <item>Releases</item>
        <item>Settings</item>
        <item>Help</item>
    </string-array>

    <string name="profile_image_description">Profile Image</string>

    <string name="input_rally_username">Rally Username</string>
    <string name="input_rally_password">Rally Password</string>
    <string name="button_login">Rally Login</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_save">Save</string>

    <string name="action_sort">Sort</string>
    <string name="action_sort_rank">Rank</string>
    <string name="action_sort_state">State</string>
    <string name="action_sort_id">ID</string>
    <string name="action_sort_name">Name</string>
    <string name="action_sort_modified">Modified</string>

    <string name="action_create">Create</string>
    <string name="action_us">User Story</string>
    <string name="action_de">Defect</string>
    <string name="action_ds">Defect Suite</string>
    <string name="action_ts">Test Set</string>
    <string name="action_iteration">Iteration</string>
    <string name="action_project">Project</string>
    <string name="action_workspace">Workspace</string>

    <string name="action_iterations">Iterations</string>
    <string name="action_projects">Projects</string>

    <string name="tip_swipe_down">Tip: You can swipe down to refresh.</string>

    <string name="pref_configuration">Configuration</string>
    <string name="pref_about">About</string>

    <string name="pref_title_username">Username</string>
    <string name="pref_key_username">username</string>

    <string name="pref_title_sort">Set Default Sort</string>
    <string name="pref_key_sort">defaultSort</string>
    <string name="pref_summary_sort">How should your items be sorted?</string>

    <string-array name="pref_value_sort">
        <item>Rank</item>
        <item>State</item>
        <item>ID</item>
        <item>Name</item>
        <item>Modified</item>
    </string-array>

    <string name="pref_title_ids">Show IDs</string>
    <string name="pref_key_ids">showIDs</string>
    <string name="pref_summary_ids">Show IDs for Stories, Defects and Tasks</string>

    <string name="pref_title_team">Beyond Me</string>
    <string name="pref_key_team">showTeam</string>
    <string name="pref_summary_team">Show items even if your aren\'t the owner</string>

    <string name="pref_title_reset">Reset Application</string>
    <string name="pref_key_reset">resetApp</string>
    <string name="pref_summary_reset">Password Changed? Switching Accounts?</string>

    <string name="pref_title_app_version">Version</string>
    <string name="pref_key_app_version">appVersion</string>
    <string name="pref_summary_app_version">1.0</string>

</resources>
