<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/create"
        android:title="@string/action_create"
        android:orderInCategory="70"
        android:icon="@drawable/ic_create"
        android:showAsAction="always"
        android:visible="true" >

        <menu android:id="@+id/create_menu">
            <item android:id="@+id/create_us"
                android:title="@string/action_create_us" />
            <item android:id="@+id/create_de"
                android:title="@string/action_create_de" />
            <item android:id="@+id/create_ds"
                android:title="@string/action_create_ds" />
            <item android:id="@+id/create_ts"
                android:title="@string/action_create_ts" />
        </menu>
    </item>

    <item android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:orderInCategory="80"
        android:icon="@drawable/ic_sort"
        android:showAsAction="always" >

        <menu android:id="@+id/sort_menu">
            <item android:id="@+id/sort_rank"
                android:title="@string/action_sort_rank" />
            <item android:id="@+id/sort_state"
                android:title="@string/action_sort_state" />
            <item android:id="@+id/sort_id"
                android:title="@string/action_sort_id" />
            <item android:id="@+id/sort_name"
                android:title="@string/action_sort_name" />
            <item android:id="@+id/sort_modified"
                android:title="@string/action_sort_modified" />
        </menu>
    </item>

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="90"
        android:icon="@drawable/ic_refresh"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_settings"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="110"
        android:icon="@drawable/ic_help"
        android:showAsAction="ifRoom" />
</menu>
