<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/create"
        android:title="@string/action_create"
        android:orderInCategory="90"
        android:icon="@drawable/ic_create"
        app:showAsAction="ifRoom"
        android:visible="true" >

        <menu android:id="@+id/create_menu">
            <item android:id="@+id/create_project"
                android:title="@string/action_project" />
            <item android:id="@+id/create_workspace"
                android:title="@string/action_workspace" />
        </menu>
    </item>

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="never" />
</menu>